# seajob-client

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yaml
scripts/: boss.cjs  index.cjs  start.cjs  test.cjs
src/: App.css  App.tsx  helper.ts  main.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plantuml/: runjob.plantuml  runjob.statemachine.plantuml
src-tauri/src/: app_handler.rs  browser.rs  command.rs  emit.rs  fetcher.rs  helper.rs  lib.rs  login.rs  main.rs  node.rs  process.rs  request.rs  store.rs  task.rs
src-tauri/src/service/: job_define.rs  mod.rs
src-tauri/tests/: test_flow.rs  test_login.rs  test_node.rs  test_request.rs
src/api/: auth.ts  index.ts  job_define.ts  request.ts
src/components/header/: index.tsx
src/data/: city.ts
src/icons/: delete.tsx
src/pages/plan/: add-job-model.tsx  detect-button.tsx  index.css  index.tsx  install-button.tsx  log-button.tsx  plan-table.tsx  run-job-button.tsx  update-button.tsx
src/pages/plan-detail/: index.css  index.tsx  state.ts
src/pages/scan/: index.css  index.tsx
src/pages/signin/: index.css  index.tsx
src/pages/signup/: index.css  index.tsx
src/pages/signup_bak/: index.tsx
src/store/: auth.ts  job_define.ts  task.ts
