[package]
name = "seajob-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # 去掉昂贵的恐慌清理逻辑
codegen-units = 1 # 一个接一个地编译包，这样编译器就可以更好地优化
lto = true # 启用链接到优化
opt-level = "s" # 优化二进制文件大小,并且不会太大消耗性能,"z"极致优化大小但是会消耗性能
strip = true # 删除调试符号

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"
tokio = { version = "1.38.0", features = ["full"] }

uuid = { version = "1.9.1", features = ["v4"] }
once_cell = "1.19.0"
sysinfo = "0.31.2"
tokio-util = { version = "0.7.11", features = ["compat"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0.63"
toml = "0.8.19"
which = "6.0.3"
anyhow = "1.0.86"
directories = "5.0.1"
ureq = "2.10.1"
walkdir = "2.5.0"
zip = "2.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
mockito = "1.4.0"
